fixes done for the api gateway url routing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expression-eval": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "serverless-http": "^2.7.0"
   }
 }
