--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "expression-eval": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.0",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.6.5",
     "serverless-http": "^2.7.0"
   }
