--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "expression-eval": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.6.5",
     "serverless-http": "^2.7.0"
